[package]
name = "jonathan"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"

[[bin]]
name = "re_gui"
path = "src/bin/re_gui.rs"

[dependencies]
egui_file = "0.22.1"
tinyfiledialogs = "3.0"
gpui = { git = "https://github.com/zed-industries/zed" }
crossterm = "0.27"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.5"
itertools = "0.14.0"
rand = "0.9.1"
unicode-width = "0.2.0"
fakeit = "1.3.0"
iocraft = "0.7.9"
smol = "2.0.2"
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"
chrono = "0.4.41"
arboard = "3.5.0"
egui_extras = "0.31.1"
