[package]
name = "jonathan"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[[bin]]
name = "guicsv"
path = "src/bin/guicsv.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"

[[bin]]
name = "dock"
path = "src/bin/dock.rs"

[dependencies]
egui_file = "0.22.1"
crossterm = "0.27"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
itertools = "0.14.0"
rand = "0.9.1"
unicode-width = "0.2.0"
fakeit = "1.3.0"
iocraft = "0.7.9"
smol = "2.0.2"
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"
chrono = "0.4.41"
arboard = "3.5.0"
egui_extras = "0.32.0"
rfd = "0.15.3"
sha2 = "0.10.9"
shared_arena = "0.8.4"
polars = { version = "0.49.1", features = [
    "csv",
    "lazy",
    "simd",
    "performant",
    "dtype-date",
    "dtype-datetime",
] }
egui_dock = "0.17.0"
poll-promise = "0.3.0"
