[package]
name = "jonathan"
version = "0.1.0"
edition = "2024"


[dependencies]
egui_file = "0.22.1"
crossterm = "0.27"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
itertools = "0.14.0"
rand = "0.9.1"
unicode-width = "0.2.0"
iocraft = "0.7.9"
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }
log = "0.4.27"
chrono = "0.4.41"
arboard = "3.5.0"
egui_extras = "0.33.0"
rfd = "0.15.3"
sha2 = "0.10.9"
polars = { version = "0.49.1", features = [
    "csv",
    "lazy",
    "simd",
    "performant",
    "dtype-date",
    "dtype-datetime",
    "temporal",
    "rows",
    "strings",
    "regex"
] }
egui_dock = "0.18"
egui_table = "0.5.0"
serde = "1.0.219"
